--- a/index.html
+++ b/index.html
@@ -5,8 +5,120 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>遊戲村-Lingvist活動</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      box-sizing: border-box;
+      font-family: '微軟正黑體';
+    }
+
+    .warp {
+      margin: 0 auto;
+      padding: 0 30px;
+      width: 100%;
+      max-width: 960px;
+    }
+
+    h1 {
+      text-align: center;
+      margin: 15px 0;
+    }
+
+    ul li {
+      margin: 15px 0;
+    }
+
+    p {
+      font-size: 16px;
+      line-height: 1.7;
+      text-align: justify;
+    }
+
+    .pic {
+      margin: 0 auto;
+      max-width: 80%;
+    }
+
+    .pic img {
+      border: 1px solid #ccc;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
-  <h1>內容測試</h1>
+  <div class="warp">
+    <h1>Lingvist使用說明</h1>
+    <ul>
+      <li>
+        <p class="step">1.先進入Lingvist官網</p>
+        <a href="https://www.lingvist.com.tw/">點此進入</a>
+        <div class="pic">
+          <img src="./images/step1.jpg">
+        </div>
+      </li>
+      <li>
+        <p class="step">2.請在官網的右上角選單中點擊「我要儲值」</p>
+        <div class="pic">
+          <img src="./images/step2.jpg">
+        </div>
+      </li>
+      <li>
+        <p class="step">3.請選擇要登入的帳號(APP也要使用相同帳號登入)。<br>例如:Facebook或是Google</p>
+        <div class="pic">
+          <img src="./images/step3.jpg">
+        </div>
+      </li>
+      <li>
+        <p class="step">4.請選擇「英文」</p>
+        <div class="pic">
+          <img src="./images/step4.jpg">
+        </div>
+      </li>
+      <li>
+        <p class="step">5.點擊以「中文繁體」學習</p>
+        <div class="pic">
+          <img src="./images/step5.jpg">
+        </div>
+      </li>
+      <li>
+        <p class="step">6.請點選「先不用，謝謝」(先在網頁將序號輸入完成)，完成後在到APP Store或Play商店下載Lingvist APP</p>
+        <div class="pic">
+          <img src="./images/step6.jpg">
+        </div>
+      </li>
+      <li>
+        <p class="step">7.請將序號輸入</p>
+        <div class="pic">
+          <img src="./images/step7.jpg">
+        </div>
+      </li>
+      <li>
+        <p class="step">8.序號輸入完成後，會顯示此畫面</p>
+        <div class="pic">
+          <img src="./images/step8.jpg">
+        </div>
+      </li>
+      <li>
+        <p class="step">9.請下載「Lingvist」的APP並開啟</p>
+        <div class="pic">
+          <img src="./images/step9.jpg">
+        </div>
+      </li>
+      <li>
+        <p class="step">10.開始測驗</p>
+        <div class="pic">
+          <img src="./images/step10.jpg">
+        </div>
+      </li>
+      <li>
+        <p class="step">11.測試完50個單字後，會出現此畫面。</p>
+        <div class="pic">
+          <img src="./images/step11.jpg">
+        </div>
+      </li>
+    </ul>
+  </div>
 </body>
 </html>
