--- a/index.html
+++ b/index.html
@@ -119,6 +119,23 @@
         </div>
       </li>
     </ul>
+    <div class="other">
+      <b style="color:red;">*專案輔助工具簡介</b>
+      <p>Lingvist是一個線上多國語言學習平台，是目前唯一使用AI及大數據 等技術所提供的語言學習應用程式，全球有千萬以上的使用者。</p>
+      <ul>
+        <li>－2013年由愛沙尼亞物理學家MaitMüntel在瑞士生活並學習法語時所創建。</li>
+        <li>－2015年10月，獲得愛沙尼亞的創業獎：最耀眼的創業公司(brightest startup)</li>
+        <li>－2017年3月起，台灣由PChome 公司代理上線，由其子公司 連科通訊經營。</li>
+      </ul>
+
+
+      <p>優點:</p>
+      <p>(1)除了內建AI演算法外, 設計團隊還搭配學習心理學的「遺忘理論」及「間隔重複理論」讓學習者在適當時機複習單字，使背誦單字的效率大大提升。</p>
+      <p>(2)不論網頁、App，只要登入相同帳號，Lingvist在任何載具上皆可同步使用，非常方便。</p>
+      <div class="pic">
+        <img style="border:none" src="./images/3C.png">
+      </div>
+    </div>
   </div>
 </body>
 </html>
